--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,8 +33,8 @@ spring:
   mail:
     host: ${MAIL_HOST:smtp.gmail.com}
     port: ${MAIL_PORT:587}
-    username: ${MAIL_USERNAME:erhan.canlica@gmail.com}
-    password: ${MAIL_PASSWORD:vyxc dubn ekqg auxq}
+    username: ${MAIL_USERNAME:your email}
+    password: ${MAIL_PASSWORD:your password}
     properties:
       mail.smtp.auth: ${MAIL_STMP_AUTH:true}
       mail.smtp.starttls.enable: ${MAIL_STMP_STARTTLS_ENABLE:true}
